--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
+    "mongodb": "^6.11.0",
     "next": "^14.2.13",
+    "qrcode-terminal": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
     "@types/node": "^20",
