--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.4.0",
+    "ejs": "^3.1.10",
     "mongodb": "^6.11.0",
     "next": "^15.0.4",
+    "nodemailer": "^6.9.16",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
