--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18",
     "@types/react-redux": "^7.1.34",
