--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.14",
