--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.4.0",
     "ejs": "^3.1.10",
+    "lucide-react": "^0.468.0",
     "mongodb": "^6.11.0",
-    "next": "^15.0.4",
+    "next": "^15.1.0",
     "nodemailer": "^6.9.16",
     "qrcode-terminal": "^0.12.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
