--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.4.0",
     "ejs": "^3.1.10",
+    "is-number": "^7.0.0",
     "lucide-react": "^0.468.0",
     "mongodb": "^6.11.0",
     "next": "^15.1.0",
