--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGODB_URI=mongodb+srv://ayush:ayush@cluster0.ocl2xlx.mongodb.net/
 MONGODB_DB=<database>
+NEXT_PUBLIC_TELEGRAM_BOT_ID=7580167715:AAEqAfsidqgvNtqvPsxnUSs9UqBbRiiWqLA
+NEXT_PUBLIC_TELEGRAM_USER_ID=1185475721
+JWT_SECRET=87643583+nerlk
 
