--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
     "ejs": "^3.1.10",
+    "form-data": "^4.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
+    "multer": "^1.4.5-lts.1",
     "next": "^15.0.4",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
     "whatsapp-web.js": "^1.26.0"
