--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,  // Skips type checking of declaration files
-    "strict": true,
+    "strict": false,  // Disable strict type-checking
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -27,7 +27,9 @@
       ]
     },
     "target": "ES2017",
-    "noImplicitAny": false  // Disable the error for implicit `any` types
+    "noImplicitAny": false,  // Disable the error for implicit `any` types
+    "skipDefaultLibCheck": true,  // Skip checking of default libraries
+    "suppressImplicitAnyIndexErrors": true  // Ignore implicit `any` errors for index signatures
   },
   "include": [
     "next-env.d.ts",
