--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
       "esnext"
     ],
     "allowJs": true,
-    "skipLibCheck": true,  // Skips type checking of declaration files
-    "strict": false,  // Disable strict type-checking
+    "skipLibCheck": true,
+    "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
@@ -27,9 +27,11 @@
       ]
     },
     "target": "ES2017",
-    "noImplicitAny": false,  // Disable the error for implicit `any` types
-    "skipDefaultLibCheck": true,  // Skip checking of default libraries
-    "suppressImplicitAnyIndexErrors": true  // Ignore implicit `any` errors for index signatures
+    "noImplicitAny": false,
+    "skipDefaultLibCheck": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": false,   // Disable unused variable checks
+    "noUnusedParameters": false // Disable unused function parameter checks
   },
   "include": [
     "next-env.d.ts",
