--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "ejs": "^3.1.10",
     "form-data": "^4.0.1",
+    "formidable": "^3.5.2",
     "is-number": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.14",
