--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.2.0",
     "@reduxjs/toolkit": "^2.4.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "ejs": "^3.1.10",
     "form-data": "^4.0.1",
@@ -51,8 +52,8 @@
     "@types/react-redux": "^7.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   }
 }
