--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "next": "^15.1.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.16",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.5",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
