--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
     "ejs": "^3.1.10",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "form-data": "^4.0.1",
     "formidable": "^3.5.2",
     "is-number": "^7.0.0",
