--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.2.0",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.2",
