--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.5",
     "qrcode-terminal": "^0.12.0",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -45,6 +46,8 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
+    "sha256": "^0.2.0",
+    "uuid": "^11.0.3",
     "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
