added buyed course

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://ayush:ayush@cluster0.ocl2xlx.mongodb.net/
+MONGODB_URI=mongodb+srv://ayush:ayush@cluster0.ocl2xlx.mongodb.net/?tls=true
 MONGODB_DB=<database>
 NEXT_PUBLIC_TELEGRAM_BOT_ID=7580167715:AAEqAfsidqgvNtqvPsxnUSs9UqBbRiiWqLA
 NEXT_PUBLIC_TELEGRAM_USER_ID=1185475721
